--- a/src/app/CustomComponents/todos/todos.component.html
+++ b/src/app/CustomComponents/todos/todos.component.html
@@ -1,7 +1,8 @@
-<p>todos works!</p>
-<ul *ngFor="let item of todos">
-    {{item.sno}} - 
-    {{item.title}} - 
-    {{item.desc}} - 
-    {{item.active}}
+<app-add-todo (todoAdd)="addTodo($event)"></app-add-todo>
+<h3>Your ToDo's </h3>
+
+<div *ngIf="this.todos.length === 0">No Todos to display</div>
+
+<ul *ngFor="let todo of todos">
+    <app-todo-items [todo]="todo" (todoDelete)="deleteTodo($event)"></app-todo-items>
 </ul>
