--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,8 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
+        <h1 class="text-center"> Todo List By Rishi</h1>
         <app-todos></app-todos>
     </div>
 </div>
