--- a/src/app/CustomComponents/todo-items/todo-items.component.html
+++ b/src/app/CustomComponents/todo-items/todo-items.component.html
@@ -1,6 +1,11 @@
 <div class="my-3">
-    <h5>{{todo.title}}</h5>
-    <p>{{todo.desc}}</p>
+    <h5 [ngClass]="{'strike': !todo.active}" >{{todo.title}}</h5>
+    <p [ngClass]="{'strike': !todo.active}" >{{todo.desc}}</p>
     
+    <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="markAsDone" (click)="onCheckBoxClick(todo)">
+        <label class="form-check-label" for="markAsDone">Mark As Done</label>
+    </div>
+
     <button class="btn btn-sm btn-danger" (click)="onClickDelete(todo)">Delete</button>
 </div>
