--- a/src/app/CustomComponents/todos/todos.component.html
+++ b/src/app/CustomComponents/todos/todos.component.html
@@ -1,8 +1,13 @@
-<app-add-todo (todoAdd)="addTodo($event)"></app-add-todo>
-<h3>Your ToDo's </h3>
+<div class="container">
+    <h1 class="text-center"> Todo List By Rishi</h1>
 
-<div *ngIf="this.todos.length === 0">No Todos to display</div>
+    <app-add-todo (todoAdd)="addTodo($event)"></app-add-todo>
+    <h3>Your ToDo's </h3>
 
-<ul *ngFor="let todo of todos">
-    <app-todo-items [todo]="todo" (todoDelete)="deleteTodo($event)" (todoChecked)="checkTodo($event)"></app-todo-items>
-</ul>
+    <div *ngIf="this.todos.length === 0">No Todos to display</div>
+
+    <ul *ngFor="let todo of todos">
+        <app-todo-items [todo]="todo" (todoDelete)="deleteTodo($event)"
+            (todoChecked)="checkTodo($event)"></app-todo-items>
+    </ul>
+</div>
